--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
           <li><a href="#Contact Us">Contact Us</a></li>
         </ul>
       </nav>
+      <div class="menubutton">
+        <h3>Get Support</h3>
+      </div>
     </section>
 
     <!-- Main Hero Banner goes here -->
